# diepvries

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-deploy-and-release.yml  create-release.yml  pages-build-and-deploy.yml  pypi-build-and-deploy.yml  run-test-suite.yml
doc/: advanced-topics.rst  development.rst  glossary.rst  index.rst  installation.rst  introduction.rst  naming-conventions.rst  philosophy.rst  security.rst  tutorial.rst
doc/snippets/: deserializer.py  dv_load.py  effsat.py  effsat_deserializer.py  extract.sql  h_customer.sql  h_order.sql  l_order_customer.sql  nodeserializer.py  rph.py  rph_deserializer.py
doc_templates/: package.rst_t  toc.rst_t
scripts/: doc.sh  package.sh
src/diepvries/: __init__.py  data_vault_field.py  data_vault_load.py  data_vault_table.py  driving_key_field.py  effectivity_satellite.py  field.py  hub.py  link.py  role_playing_hub.py  satellite.py  table.py  test_sqlalchemy.py
src/diepvries/deserializers/: __init__.py  snowflake.py  snowflake_deserializer.py  snowflake_model_metadata.sql
src/diepvries/template_sql/: __init__.py  effectivity_satellite_dml.sql  hub_dml.sql  hub_link_dml.py  hub_link_dml.sql  link_dml.sql  role_playing_hub_dml.sql  satellite_dml.sql  sql_formulas.py  staging_table_ddl.sql
test/: conftest.py  test_data_vault_load.py  test_driving_key_field.py  test_field.py  test_hub.py  test_link.py  test_process_config.yml  test_satellite.py
test/deserializers/: __init__.py  conftest.py  model_metadata.json  test_snowflake_deserializer.py
test/sql/: expected_result_data_vault_load.sql  expected_result_effectivity_satellite.sql  expected_result_hashdiff.sql  expected_result_hashkey.sql  expected_result_hub.sql  expected_result_link.sql  expected_result_role_playing_hub.sql  expected_result_satellite.sql  expected_result_staging.sql  expected_results_data_vault_load.sql  expected_results_data_vault_load_with_role_playing.sql  expected_results_effectivity_satellite.sql  expected_results_hub.sql  expected_results_link.sql  expected_results_role_playing_hub.sql  expected_results_satellite.sql  expected_results_staging.sql  expected_results_staging_with_role_playing.sql
