[metadata]
name = diepvries
url = https://github.com/PicnicSupermarket/diepvries
project_urls =
    Documentation = https://diepvries.picnic.tech/
    Source Code = https://github.com/PicnicSupermarket/diepvries
    Issue Tracker = https://github.com/PicnicSupermarket/diepvries/issues
description = diepvries - Picnic Data Vault framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data vault
license = MIT
author = Picnic Technologies
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
package_dir = = src
install_requires =
    snowflake-connector-python~=2.4
test_requires =
    pytest~=6.2

[options.packages.find]
where = src
